--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,23 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
             "label": "Run Tests",
             "type": "shell",
-            "command": "Invoke-Pester .\\tests\\PowerShell.BizTalk.Tests.ps1",
-            "problemMatcher": []
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+            },
+            "command": "Invoke-Pester",
+            "args": [
+                "-Path",
+                "${workspaceFolder}\\tests\\PowerShell.BizTalk.Tests.ps1"
+            ],
+            "problemMatcher": [
+                "$pester"
+            ]
         }
     ]
 }
